manifests/apps/koito/koito-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: koito
  name: koito
spec:
  replicas: 1
  selector:
    matchLabels:
      service: koito
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: koito
    spec:
      containers:
        - image: ghcr.io/kreatoo/koito-docker
          name: koito
          ports:
            - containerPort: 4110
              protocol: TCP
          volumeMounts:
            - mountPath: /etc/koito
              name: data
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
