manifests/apps/koito/koito-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: koito
  name: koito
spec:
  ports:
    - name: "4110"
      port: 4110
      targetPort: 4110
  selector:
    service: koito
