manifests/apps/koito/test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: my-first-gateway
  namespace: default # Or any namespace you prefer
spec:
  gatewayClassName: cilium # This MUST match the GatewayClass name
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
