manifests/apps/koito/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: koito-api-route
  namespace: koito
spec:
  parentRefs:
    - name: gateway
      namespace: cert-manager
  hostnames:
    - "fm.krea.to"
  rules:
    - backendRefs:
        - name: koito
          port: 4110
          kind: Service
