manifests/apps/koito/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: koito
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`fm.krea.to`)"
      priority: 10
      services:
        - kind: Service
          name: koito
          namespace: koito
          passHostHeader: true
          port: 4110
          scheme: http
  tls:
    domains:
      - main: fm.krea.to
    secretName: wildcard-krea.to-tls
